# arabic-ocr-web

./: .env.dev  .env.example  .env.prod  .gitignore  README.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml
.github/workflows/: ci.yml  deploy.yml
auth-service/: Dockerfile  alembic.ini  auth-deployment.yaml  auth-ingress.yaml  docker-compose.yml  migrate.sh  pyproject.toml  requirements.txt
auth-service/alembic/: env.py
auth-service/alembic/versions/: 20410e296289_initial_migration_with_name_field.py  b3e9f1a2c4d5_remove_is_active.py  c9f1a3b2e8d7_make_hashed_password_nullable.py  d7911c4ffe4c_initial_schema.py
auth-service/app/: main.py
auth-service/app/api/api_v1/: api.py
auth-service/app/api/api_v1/endpoints/: google_auth.py  health.py  login.py  password.py  refresh.py  register.py  users.py  verify.py
auth-service/app/core/: config.py  dependencies.py  email.py  security.py
auth-service/app/crud/: crud_user.py
auth-service/app/db/: session.py
auth-service/app/models/: user.py
auth-service/app/schemas/: user.py
auth-service/authvenv/: pyvenv.cfg
auth-service/docker/postgres/: docker-compose.yml
auth-service/supabase/migrations/: 20250730_initial_schema.sql
backend/: Dockerfile  main.py  requirements.txt
backend/app/: main.py
backend/output/: sample_20250630131218.docx  sample_20250630131614.docx  sample_20250630145148.docx  sample_20250630152805.docx  sample_20250702210823.docx  sample_20250702212531.docx  (+14 more)
doc-manager/: Dockerfile  build.sh  pyproject.toml  requirements.txt
doc-manager/app/: main.py
doc-manager/app/api/api_v1/: api.py
doc-manager/app/api/api_v1/endpoints/: document.py  document_settings.py  process.py  sample.py  status.py  upload.py
doc-manager/app/core/: config.py
doc-manager/app/dependencies/: auth.py  storage.py
doc-manager/app/queue/: task_queue.py
doc-manager/app/schemas/: document.py
doc-manager/app/services/: local_storage.py  r2_storage.py  storage.py
doc-manager/app/worker/: consumer.py  publisher.py
frontend/: Dockerfile  build.sh  frontend-deployment.yaml  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.mjs
k8s/: ingress.yaml  main-ingress.yaml  namespace.yaml  www-redirect.yaml
ocr-worker/: local_app.py  modal_app.py  pipeline.py
scripts/: local-k8s.sh
(+101 files in other folders)
