[project]
name = "doc-manager"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.116",
    "uvicorn[standard]>=0.35",
    "pydantic>=2.11",
    "pydantic-settings>=2.10",
    "python-dotenv>=1.1",
    "python-multipart>=0.0.20",
    "python-jose[cryptography]>=3.3",
    "boto3>=1.40",
    "pika>=1.3",
    "httpx>=0.28",
    "prometheus-fastapi-instrumentator>=6.1",
    "modal>=0.73",
    "requests>=2.31",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-cov>=6.0",
    "httpx>=0.28",
    "ruff>=0.9",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=app --cov-report=term-missing --cov-fail-under=70"

[tool.coverage.run]
# Exclude files that require external services (R2, RabbitMQ) from unit test coverage.
# These are covered by integration tests against real infrastructure.
omit = [
    "app/services/r2_storage.py",
    "app/queue/task_queue.py",
    "app/worker/consumer.py",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]
ignore = ["E501"]
